--- a/requirements.yml
+++ b/requirements.yml
@@ -4,3 +4,4 @@
 - src: tvieira.powerline-fonts
 - src: elliotweiser.osx-command-line-tools
 - src: gantsign.visual-studio-code-extensions
+- src: fubarhouse.macdock
